[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "linearity-utils"
version = "0.0.1"
requires-python = ">= 3.11"
authors = [{name="Matthew Prem", email="mprem@terpmail.umd.edu"}]
readme = {file="README.md", content-type = "text/markdown"}

[project.scripts]
analyze = linearity_utils.scripts.analyze:start